--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
         <header class="liquid-glass">
             <div class="item"><img src="https://t.me/i/userpic/320/cMHhnvlfBklbF0hkKyF87bqGUt-ocTTwTz4Bax86be0AYE9xNl6anctdc5s3pZBv.svg" alt="ава"><span class="header_text">Алексей Дроков</span></div>
             <p></p>
-            <div class="item"><a class="button huy" href="javascript:Telegram.WebApp.openTelegramLink('https://t.me/whyDrok');">Мой профиль</a></div> 
+            <div class="item"><a class="button huy" href="javascript:Telegram.WebApp.openTelegramLink('https://t.me/CaneIIa');">Мой профиль</a></div> 
         </header>
         <div id="first_info" class="sf first_info">
             <div class="text">
@@ -212,16 +212,6 @@
             <div class="img_esc"><img src="files/img/фото GradeCalc.png" alt="ава"></div>
             <span class="subtitle">GradeCalc  </span><a id="openModalBtn" class="btn">Подробнее</a><br>
             <p class="texts">Калькулятор оценок, для получения среднего балла исходя из какого-то определённого количества оценок.</p>
-        </div>
-        <div id="third_info" class="sf third_info">
-            <div class="img_esc"><img src="files/img/фото Скибиди габва.png" alt="ава"></div>
-            <span class="subtitle">Скибиди габв  </span><a href="javascript:Telegram.WebApp.openTelegramLink('https://t.me/ScibidiGabovBot');" class="btn">Открыть</a><br>
-            <p class="texts">Игра-кликер про Скибиди Габва, при достижении 1млрд очков, все участники игры получат мишку-подарок Telegram!</p>
-        </div>
-        <div id="third_info" class="sf third_info">
-            <div class="img_esc"><img src="files/img/фото FontsStore.png" alt="ава"></div>
-            <span class="subtitle">GoogleSans  </span><a class="btn" href="javascript:Telegram.WebApp.openTelegramLink('https://t.me/GoogleSansBot');">Открыть</a><br>
-            <p class="texts">GoogleSans. Это простенький бот, для покупки моих любимых шрифтов. Сейчас там 90% скидки!</p>
         </div>
         <!-- <div id="third_info" class="sf third_info">
             <div class="img_esc"><img src="files/img/фото EmojiBot.png" alt="ава"></div>
@@ -333,4 +323,5 @@
     document.oncontextmenu = noselect;
     function noselect() {return false;}
 </script>
+
 
