--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
         <header class="liquid-glass">
             <div class="item"><img src="https://t.me/i/userpic/320/cMHhnvlfBklbF0hkKyF87bqGUt-ocTTwTz4Bax86be0AYE9xNl6anctdc5s3pZBv.svg" alt="ава"><span class="header_text">Алексей Дроков</span></div>
             <p></p>
-            <div class="item"><a class="button huy" href="javascript:Telegram.WebApp.openTelegramLink('https://t.me/CaneIIa');">Мой профиль</a></div> 
+            <div class="item"><a class="button huy" href="javascript:Telegram.WebApp.openTelegramLink('https://t.me/CaneIIe');">Мой профиль</a></div> 
         </header>
         <div id="first_info" class="sf first_info">
             <div class="text">
@@ -323,6 +323,7 @@
     document.oncontextmenu = noselect;
     function noselect() {return false;}
 </script>
+
 
 
 
